# EmoCopter

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
client/: .classpath  .project
client/src/constants/: EmoConst.java  GUIConst.java
client/src/eegUtils/gui/: RawSignalPlot.java
client/src/eegUtils/util/: WindowedDataBuffer.java
client/src/emokit/: EEGCap.java  EmoFrame.java  InfoSensor.java  Sensor.java
client/src/exceptions/: FullFrameException.java  WrongSensorException.java
client/src/feature_extraction/: Features.java
client/src/frame/: EmoFrame.java
client/src/learning/: Neuron.java  Perceptron.java  Teacher.java
client/src/main/: OscARDrone.java
client/src/mapping/: Command.java  ConsciousControl.java  KeyControl.java  P300Control.java  RandomControl.java
client/src/neural_network/: Neuron.java  Perceptron.java  Teacher.java
client/src/potentials/: ARDRoneSpeller.java  ARDroneSpellerGrid.java  P300.java
client/src/sensors/: EEGCap.java  Sensor.java
client/src/waves/: Patterns.java
examples/emokit_osc/: CMakeLists.txt  emokit_osc.cpp
examples/emokit_osc/java/emocopter/: .classpath
examples/emokitd/: CMakeLists.txt  emokitd.c
include/: band_waves.h
include/emokit/: emokit.h
include/oscpack/: CMakeLists.txt
include/oscpack/osc/: OscHostEndianness.h
server/examples/emokit_osc/: CMakeLists.txt  emokit_osc.cpp
server/include/emokit/: emo_dsp.h
server/src/: CMakeLists.txt  band_waves.c  emokit.c
src/: CMakeLists.txt  band_waves.c  emo_dsp.c  emokit.c  emokit_libusb.c  emotiv_win32.c
(+20 files in other folders)
